--- a/OneSignalSDKFiles/manifest.json
+++ b/OneSignalSDKFiles/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "OneSignal Example",
-  "short_name": "OneSignalExample",
+  "name": "Bus Tracker",
+  "short_name": "Bus Tracker",
   "start_url": "/",
   "display": "standalone",
   "gcm_sender_id": "482941778795",
-  "DO_NOT_CHANGE_GCM_SENDER_ID": "Do not change the GCM Sender ID"
+  
 }
