--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "OneSignal Example",
-  "short_name": "OneSignalExample",
+  "name": "Bus Tracker",
+  "short_name": "Bus Tracker",
   "start_url": "/",
   "display": "standalone",
   "gcm_sender_id": "482941778795",
